Added empty jar block

--- a/src/main/resources/assets/jellybeans-mod/lang/en_us.json
+++ b/src/main/resources/assets/jellybeans-mod/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-  "item.jellybeans-mod.jellybeans": "Jellybeans"
+  "item.jellybeans-mod.jellybeans": "Jellybeans",
+
+  "block.jellybeans-mod.empty_jar": "Empty Jar",
+
+  "itemgroup.jellybeans": "Jellybeans Mod"
 }
