Added jar of jellybeans: item, block, crafting, and drops

--- a/src/main/resources/assets/jellybeans-mod/lang/en_us.json
+++ b/src/main/resources/assets/jellybeans-mod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.jellybeans-mod.jellybeans": "Jellybeans",
 
   "block.jellybeans-mod.empty_jar": "Empty Jar",
+  "block.jellybeans-mod.jar_of_jellybeans": "Jar of Jellybeans",
 
   "itemgroup.jellybeans": "Jellybeans Mod"
 }
